RESOLVED FIXED 252319
[GStreamer][MediaStream] AudioDestination buffers layout is incorrect
https://bugs.webkit.org/show_bug.cgi?id=252319
Summary [GStreamer][MediaStream] AudioDestination buffers layout is incorrect
Philippe Normand
Reported 2023-02-15 09:35:20 PST
The caps advertise planar but that's not how we copy data to the buffers...
Attachments
Philippe Normand
Comment 1 2023-02-15 09:40:18 PST
EWS
Comment 2 2023-02-16 04:43:09 PST
Committed 260361@main (b2fe9a2501d1): <https://commits.webkit.org/260361@main> Reviewed commits have been landed. Closing PR #10150 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-02-16 04:44:20 PST
Note You need to log in before you can comment on or make changes to this bug.