Cherry-pick 260361@main (b2fe9a2501d1). https://bugs.webkit.org/show_bug.cgi?id=252319

[GStreamer][MediaStream] AudioDestination buffers layout is incorrect
    https://bugs.webkit.org/show_bug.cgi?id=252319

    Reviewed by Xabier Rodriguez-Calvar.

    Copy the bus data to a tightly packed GstBuffer memory, as mandated by the audio layout advertised
    by the caps. Also drive-by, set the PTS on the new buffer.

    * Source/WebCore/Modules/webaudio/MediaStreamAudioSourceGStreamer.cpp:
    (WebCore::copyBusData):
    (WebCore::MediaStreamAudioSource::consumeAudio):

    Canonical link: https://commits.webkit.org/260361@main